updated css with consolidated elemenet selectors

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -10,6 +10,16 @@
         background-color: #d9dcd6;
     }
 
+    h1 { /*question on why this is highlighted*/
+        display: inline-block;
+        font-size: 48px;
+        color: #ffffff;
+    }
+
+    h2 h3 {
+        color: #ffffff;
+    }
+
     p {
         font-size: 16px;
     }
@@ -29,12 +39,7 @@
         color: #ffffff;
     }
 
-    .header h1 {
-        display: inline-block;
-        font-size: 48px;
-    }
-
-    .header h1 .seo {
+    .seo {
         color: #d9dcd6;
     }
 
