--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -87,10 +87,6 @@
             max-height: 200px;
         }
     
-   
-    .social-media-marketing img {
-        max-height: 200px;
-    }
 
     .search-engine-optimization h2 {
         margin-bottom: 20px;
@@ -115,7 +111,7 @@
         width: 20%;
         height: 100%;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        background-color: #0072bb;
+        background-color: #269be4;
     }
 
     .benefit-lead {
