--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -74,7 +74,7 @@
         margin-left: 20px;
     }
 
-        .content-box { /*why when I change this name does ti all screw up even if I update it in the html file?*/
+        .content-box {
             margin-bottom: 20px;
             padding: 50px;
             height: 300px;
@@ -88,21 +88,6 @@
         }
     
 
-    .search-engine-optimization h2 {
-        margin-bottom: 20px;
-        font-size: 36px;
-    }
-
-    .online-reputation-management h2 {
-        margin-bottom: 20px;
-        font-size: 36px;
-    }
-
-    .social-media-marketing h2 {
-        margin-bottom: 20px;
-        font-size: 36px;
-    }
-
     .benefits {
         margin-right: 20px;
         padding: 20px;
@@ -114,53 +99,43 @@
         background-color: #269be4;
     }
 
-    .benefit-lead {
-        margin-bottom: 32px;
-        color: #ffffff;
-    }
+        .benefit-box {
+            margin-bottom: 32px;
+            color: #ffffff;
+        }
 
-    .benefit-brand {
-        margin-bottom: 32px;
-        color: #ffffff;
-    }
+        .benefit-lead h3 {
+            margin-bottom: 10px;
+            text-align: center;
+        }
 
-    .benefit-cost {
-        margin-bottom: 32px;
-        color: #ffffff;
-    }
+        .benefit-brand h3 {
+            margin-bottom: 10px;
+            text-align: center;
+        }
 
-    .benefit-lead h3 {
-        margin-bottom: 10px;
-        text-align: center;
-    }
+        .benefit-cost h3 {
+            margin-bottom: 10px;
+            text-align: center;
+        }
 
-    .benefit-brand h3 {
-        margin-bottom: 10px;
-        text-align: center;
-    }
+        .benefit-lead img {
+            display: block;
+            margin: 10px auto;
+            max-width: 150px;
+        }
 
-    .benefit-cost h3 {
-        margin-bottom: 10px;
-        text-align: center;
-    }
+        .benefit-brand img {
+            display: block;
+            margin: 10px auto;
+            max-width: 150px;
+        }
 
-    .benefit-lead img {
-        display: block;
-        margin: 10px auto;
-        max-width: 150px;
-    }
-
-    .benefit-brand img {
-        display: block;
-        margin: 10px auto;
-        max-width: 150px;
-    }
-
-    .benefit-cost img {
-        display: block;
-        margin: 10px auto;
-        max-width: 150px;
-    }
+        .benefit-cost img {
+            display: block;
+            margin: 10px auto;
+            max-width: 150px;
+        }
 
     .footer {
         padding: 30px;
