consolidated some h arguments from the footer, consolidated benefits section classes for re-use

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -31,8 +31,17 @@
         color: #ffffff;
     }
 
+    h2 {
+        font-size: 20px;
+    }
+
     h2 h3 {
         color: #ffffff;
+    }
+
+
+    h3 {
+        text-align: center;
     }
 
     ul li {
@@ -104,48 +113,19 @@
             color: #ffffff;
         }
 
-        .benefit-lead h3 {
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        .benefit-brand h3 {
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        .benefit-cost h3 {
-            margin-bottom: 10px;
-            text-align: center;
-        }
-
-        .benefit-lead img {
+        .benefit-img {
             display: block;
             margin: 10px auto;
             max-width: 150px;
         }
 
-        .benefit-brand img {
-            display: block;
-            margin: 10px auto;
-            max-width: 150px;
-        }
-
-        .benefit-cost img {
-            display: block;
-            margin: 10px auto;
-            max-width: 150px;
-        }
 
     .footer {
+        font-size:20px;
         padding: 30px;
         clear: both;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-align: center;
-    }
-
-    .footer h2 {
-        font-size: 20px;
     }
 
 
