--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,44 +1,23 @@
-/*Global Styling*/
+/*Global & Elemenets Styling*/
     * {
         box-sizing: border-box;
         padding: 0;
         margin: 0;
     }
 
-/*Styling For Elements Types*/
     body {
         background-color: #d9dcd6;
     }
 
-    header {
-        padding: 20px;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        background-color: #2a607c;
-        color: #ffffff;
-    }
-
-    nav {
-        padding-top: 15px;
-        margin-right: 20px;
-        float: right;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 20px;
-    }
-
-    h1 { /*question on why this is highlighted*/
+    h1 {
         display: inline-block;
         font-size: 48px;
         color: #ffffff;
     }
 
-    h2 {
-        font-size: 20px;
-    }
-
     h2 h3 {
         color: #ffffff;
     }
-
 
     h3 {
         text-align: center;
@@ -51,6 +30,7 @@
 
     p {
         font-size: 16px;
+        display: inline-block;
     }
 
     a {
@@ -59,11 +39,28 @@
     }
     
 
-/*Styling For Classes*/
+/*Styling for the Header*/
 
-    .seo {
-        color: #d9dcd6;
-    }
+    .header {
+        padding: 20px;
+        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        background-color: #2a607c;
+        color: #ffffff;
+     }
+
+        .seo {
+            color: #d9dcd6;
+        }
+
+        .nav {
+            padding-top: 15px;
+            margin-right: 20px;
+            float: right;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            font-size: 20px;
+         }
+
+ /*Styling for the HERO Container*/
 
     .hero {
         height: 800px;
@@ -77,6 +74,7 @@
         padding-right: 0px;
     }
     
+/*Styling For The Main Content Section*/
     .content {
         width: 75%;
         display: inline-block;
@@ -92,10 +90,14 @@
             color: #ffffff;
         }
 
-        img { /*need to move this to elements or make this a class and get it to work with pics in the content boxes*/
+        .content-img { 
             max-height: 200px;
-        }
-    
+            float: left;
+            margin-right: 25px;
+         }   
+         
+
+/*Styling For The Benefits Aside*/   
 
     .benefits {
         margin-right: 20px;
@@ -120,6 +122,8 @@
         }
 
 
+/*This is the Styling for the Footer*/
+
     .footer {
         font-size:20px;
         padding: 30px;
@@ -127,12 +131,11 @@
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         text-align: center;
     }
-
-
+ 
 /*float classes*/
     .float-left {
         float: left;
-        margin-right: 25px;
+ 
     }
 
     .float-right {
