--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -26,11 +26,6 @@
         font-size: 16px;
     }
 
-    a {
-        color: #ffffff;
-        text-decoration: none;
-    }
-    
 
 /*Styling for the Header*/
 
@@ -57,6 +52,10 @@
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 20px;
          }
+            .nav-a {
+                color: #ffffff;
+                text-decoration: none;
+            }
 
  /*Styling for the HERO Container*/
 
