--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,4 +1,9 @@
-/*Global & Elemenets Styling*/
+/*
+The CSS is organized to follow the same structure as the HTML file top to bottom. Classes were used most heavily and were named
+consistently with semantic tags utilized in the HTML file.
+/*
+
+/*Global Styling and Styling By Generic Elemenet Selector*/
     * {
         box-sizing: border-box;
         padding: 0;
@@ -27,7 +32,7 @@
     }
 
 
-/*Styling for the Header*/
+/*Styling for the Header and Child Elemenets*/
 
     .header {
         padding: 20px;
@@ -52,6 +57,7 @@
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             font-size: 20px;
          }
+
             .nav-a {
                 color: #ffffff;
                 text-decoration: none;
@@ -71,7 +77,7 @@
         padding-right: 0px;
     }
     
-/*Styling For The Main Content Section*/
+/*Styling For The Main Content Section and Child Elemenets*/
     .content {
         width: 75%;
         display: inline-block;
@@ -87,9 +93,9 @@
             color: #ffffff;
         }
 
-        h2 {
+        .content-h2 {
             font-size: 45px;
-            margin-bottom: 25px;
+            margin-bottom:25px;
         }
         
         .content-img-l { 
@@ -101,11 +107,11 @@
          .content-img-r { 
             max-height: 200px;
             float: right;
-            margin-right: 25px;
+            margin-left: 25px;
          }   
 
 
-/*Styling For The Benefits Aside*/   
+/*Styling For The Benefits Aside and Chile Elements*/   
 
     .benefits {
         margin-right: 20px;
