fixed readme TOC I think, some other updates to CSS org

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -15,7 +15,7 @@ would have different styling in different sections / asides etc.
         background-color: #d9dcd6;
     }
 
-    h1 h2 h3 p a {
+    h1, h2, h3, p, a {
         color: #ffffff;
     }
 
@@ -23,7 +23,6 @@ would have different styling in different sections / asides etc.
 
     .header {
         background-color: #2a607c;
-        color: #ffffff;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         padding: 20px;
      }
