--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -134,14 +134,22 @@ would have different styling in different sections / asides etc.
 /*This is the Styling for the Footer*/
 
     .footer {
+       color:black;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         font-size:20px;
         text-align: center;
         padding: 30px;
     }
 
-        .footer-h3 {
+        .footer  h2 {
+            color: black;
             font-size: 24px;
         }
+
+        .footer p {
+            color: black;
+            font-size:14px;
+        }
+        
 
     
