restored original benefits aside color

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -106,7 +106,7 @@ a specific set of classes was created for those elements but named semantically.
 /*Styling Aside (Benefits) Container and Its Child Elements*/   
 
     .benefits {
-        background-color: #269be4;
+        background-color: #2589bd;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         width: 20%;
         height: 100%;
